# study_swiper

./: README.md  logo.psd  pyproject.toml  study_swiper.py
.github/workflows/: build.yaml
